continuando o projeto