@@ -2,53 +2,48 @@ package com.example.logisticstracking.application.usecase;
 
 import com.example.logisticstracking.application.dto.PackageDetailsDTO;
 import com.example.logisticstracking.application.dto.TrackingEventDTO;
+import com.example.logisticstracking.domain.exception.PackageNotFoundException;
+import com.example.logisticstracking.infrastructure.mapper.PackageMapper;
+import com.example.logisticstracking.infrastructure.mapper.TrackingEventMapper;
 import com.example.logisticstracking.infrastructure.persistence.entity.PackageEntity;
 import com.example.logisticstracking.infrastructure.persistence.repository.PackageRepository;
 import com.example.logisticstracking.infrastructure.persistence.repository.TrackingEventRepository;
 import java.util.List;
-import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.cache.annotation.Cacheable;
 import org.springframework.stereotype.Service;
 
+@Slf4j
 @Service
 public class GetPackageDetailsUseCase {
 
     private final PackageRepository packageRepository;
     private final TrackingEventRepository trackingEventRepository;
+    private final PackageMapper packageMapper;
+    private final TrackingEventMapper trackingEventMapper;
 
     public GetPackageDetailsUseCase(PackageRepository packageRepository,
-                                    TrackingEventRepository trackingEventRepository) {
+                                    TrackingEventRepository trackingEventRepository,
+                                    PackageMapper packageMapper,
+                                    TrackingEventMapper trackingEventMapper) {
         this.packageRepository = packageRepository;
         this.trackingEventRepository = trackingEventRepository;
+        this.packageMapper = packageMapper;
+        this.trackingEventMapper = trackingEventMapper;
     }
-
+    @Cacheable(value = "packages", key = "#packageId")
     public PackageDetailsDTO execute(String packageId, boolean includeEvents) {
-        PackageEntity pkg = packageRepository.findById(packageId)
-                .orElseThrow(() -> new RuntimeException("Pacote não encontrado: " + packageId));
 
-        List<TrackingEventDTO> eventDTOs = includeEvents
-                ? trackingEventRepository.findByPackageId(packageId).stream()
-                .map(e -> new TrackingEventDTO(
-                        e.getId(),
-                        e.getPackageId(),
-                        e.getLocation(),
-                        e.getDescription(),
-                        e.getDate()))
-                .collect(Collectors.toList())
+        PackageEntity packageEntity = packageRepository.findById(packageId)
+                .orElseThrow(() -> new PackageNotFoundException(packageId));
+
+        List<TrackingEventDTO> trackingEvents = includeEvents
+                ? trackingEventRepository.findByPackageEntityIdOrderByDateAsc(packageId).stream()
+                .map(trackingEventMapper::toDTO)
+                .toList()
                 : List.of();
 
-        return new PackageDetailsDTO(
-                pkg.getId(),
-                pkg.getDescription(),
-                pkg.getSender(),
-                pkg.getRecipient(),
-                pkg.getStatus(),
-                pkg.getCreatedAt(),
-                pkg.getUpdatedAt(),
-                pkg.getDeliveredAt(),
-                pkg.isHoliday(),
-                pkg.getFunFact(),
-                pkg.getEstimatedDeliveryDate(),
-                eventDTOs
-        );
+        return packageMapper.toDetailsDTO(packageEntity, trackingEvents);
     }
+
 }
